--- a/templates/dashboard/partials/navbar.html
+++ b/templates/dashboard/partials/navbar.html
@@ -24,7 +24,7 @@
                 </svg>
                 <span class="sr-only">Toggle sidebar</span>
             </button>
-            <a href="my github project url goes here"
+            <a href="https://github.com/samarth-kaul/ClientVault"
                class="flex items-center justify-between mr-4">
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">ClientVault</span>
             </a>
@@ -112,7 +112,7 @@
                     aria-labelledby="dropdown">
                     <li>
                         <a href="{% url 'dashboard:profile' %}"
-                           class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">My profile</a>
+                           class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white">My Profile</a>
                     </li>
                 </ul>
                 <ul class="py-1 text-gray-700 dark:text-gray-300"
